src/test/deca/codegen/invalid/SansObjet/ArithmeticFloatOverflow-ConvFloat.deca
// Description:
//    Overflow for a convrsion from an int to a float
//
// Results:
//     ERROR: float_arithmetic_overflow
//
// History:
//    created on 13/01/2022

{
    //TODO
}
